--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,20 +9,21 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch: 
+    inputs:
+      python_version:
+        required: true
+        default: "3.10"
 
 jobs:
   build:
 
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: ["3.6", "3.10"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ github.event.inputs.python_version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -35,21 +36,7 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: everphotoDL-${{ matrix.python-version == '3.6' && 'windows_7' || 'windows_10' }}
+        name: everphotoDL
         path: dist/everphotoDL.exe
-    - name: short-sha
-      uses: benjlevesque/short-sha@v2.2
-      id: short-sha
-    - name: Publish release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          dist/everphotoDL.exe
-        tag_name: beta
-        name: everphotoDL v.beta.${{ steps.short-sha.outputs.sha }}
-        body: |
-          # This a beta version
-        draft: false
-        prerelease: false
         
 
