--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,12 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    # branches: [ "main" ]
     paths-ignore:
       - '.github/**'
       - '**.md'
   pull_request:
-    branches: [ "main" ]
+    # branches: [ "main" ]
     paths-ignore:
       - '.github/**'
       - '**.md'
